--- a/index.html
+++ b/index.html
@@ -4,22 +4,55 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bathing State</title>
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Young+Serif&family=Bitter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+  <!-- <nav>
+    <a href="#content" class="skip-link">Skip to Content</a>
+    <div class="menu-toggle">
+      <span class="menu-text">Open Menu</span>
+      <span class="menu-text close-text">Close Menu</span>
+    </div>
+  </nav> -->
+
+  <main id="content">
     <h1>Bathing State</h1>
     <p class="tagline">Bathhouse design + supply</p>
-    <p class="subtext">For micro hotels and backyards</p>
-  </header>
-  <main>
-    <p class="coming-soon">Coming soon........................................</p>
-    <p class="coming-soon">〰️ Coming soon........................................ 〰️ Coming soon........................................ 〰️</p>
+    <p class="subtext">For small hotels and backyards</p>
+    
+    <div class="coming-soon-section">
+      <div class="coming-soon-repeated">
+        <span class="wave">〰️</span>
+        <span class="coming-soon-text">Coming soon</span>
+        <span class="wave">〰️</span>
+        <span class="coming-soon-text">Coming soon</span>
+        <span class="wave">〰️</span>
+        <span class="coming-soon-text">Coming soo</span>
+        <span class="wave">〰️</span>
+        <span class="coming-soon-text">Coming soon</span>
+        <span class="wave">〰️</span>
+        <span class="coming-soon-text">Coming soon</span>
+        <span class="wave">〰️</span>
+        <span class="coming-soon-text">Coming soon</span>
+        <span class="wave">〰️</span>
+        <span class="coming-soon-text">Coming soon</span>
+        <span class="wave">〰️</span>
+        <span class="coming-soon-text">Coming soon</span>
+        <span class="wave">〰️</span>
+        <span class="coming-soon-text">Coming soon</span>
+        <span class="wave">〰️</span>
+        <span class="coming-soon-text">Coming soon</span>
+        <span class="wave">〰️</span>
+        <span class="coming-soon-text">Coming soon</span>
+      </div>
+    </div>
+
+    <div class="connect-section">
+      <a href="mailto:hello@bathingstate.com" class="connect-button">Let's connect !</a>
+    </div>
   </main>
-  <footer>
-    <p>Let’s connect !</p>
-  </footer>
 </body>
 </html>
