--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="connect-section">
-      <a href="mailto:hello@bathingstate.com" class="connect-button">Let's connect !</a>
+      <a href="mailto:hello@bathingstate.com" class="connect-button">hello@bathingstate.com</a>
     </div>
   </main>
 </body>
